<resources>
    <string name="app_name">Instagrom</string>
    <string name="descriptionHint">Description...</string>
    <string name="login">Log In</string>
    <string name="loginFail">Login failed: Invalid username or password.</string>
    <string name="signup">Sign Up</string>
    <string name="usernameHint">Username</string>
    <string name="passwordhint">Password</string>
    <string name="camera">Capture Image</string>
    <string name="submit">Submit</string>
    <string name="password_length_error">Password must be 6 characters or longer</string>
    <string name="password_unmatch_error">Unmatched password</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="gallery">Go to Gallery</string>
</resources>